cabal-version: 2.4
name: study
version: 1.0
stability: experimental
x-ghc-framework-version: 8.6.4-13.14-3
x-last-ide-version: HfM1.8.2

executable study
    main-is: Main.hs
    other-modules:
        DataListChar
        StudyFunction
        StudyList
        StudyBasic
    default-language: Haskell2010
    build-depends:
        base -any
